[package]
name = "frikadellen_baf"
version = "3.0.0"
edition = "2021"
authors = ["TreXito"]
description = "Frikadellen BAF (Bazaar Auction Flipper) for Hypixel Skyblock - Rust port using Azalea"
license = "AGPL-3.0"

[[bin]]
name = "frikadellen_baf"
path = "src/main.rs"

[[bin]]
name = "FrikadellenBAF-loader"
path = "src/loader.rs"

[dependencies]
# Azalea Minecraft bot framework
azalea = "0.15"
azalea-protocol = "0.15"
azalea-inventory = "0.15"
azalea-chat = "0.15"
azalea-client = { path = "deps/azalea-client" }
bevy_app = "0.18"
bevy_ecs = "0.18"
openssl = { version = "0.10", features = ["vendored"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"

# Networking
reqwest = { version = "0.13", features = ["json", "blocking"] }

# HMAC-SHA256 for signing relay notifications (keeps webhook URLs out of source)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"
regex = "1.10"
rand = "0.9"
dirs = "5.0"

# CLI interaction
dialoguer = "0.11"
rustyline = "15.0"

# Web server for control panel
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# OG image generation for link embeds
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
# Use a locally patched azalea-client that runs the ECS Update schedule at
# 300 fps instead of the default 60 fps.  This reduces average packet-detection
# latency from ~8.3 ms to ~1.65 ms, helping purchases complete in 2 server
# ticks instead of 3 on borderline connections.
azalea-client = { path = "deps/azalea-client" }
